Bug 163291 - AdditionsDialog does not work while in start center
Summary: AdditionsDialog does not work while in start center
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Hossein
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords:
: 137922 140919 147337 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-04 09:13 UTC by Hossein
Modified: 2024-10-13 17:38 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2024-10-04 09:13:51 UTC
Description:
The AdditionsDialog is used to make it easier to install extensions, icons, dictionaries, etc. When trying to open it via Tools > Options, it does not work while start center is open, and there are no Writer/Calc/Draw/etc. documents are open.

Steps to Reproduce:
1. Open LibreOffice, stay in start center and do not open any documents/windows.
2. Go to "Tools > Options > LibreOffice > View".
3. Click on the button with download icon in "Appearance > Icon Theme > Theme". The button is placed after the combo box with the name of selected icon theme.

Actual Results:
Nothing happens.

Expected Results:
AdditionsDialog should open. You can do the exact same steps, but when you open a Writer/Calc/Draw/etc. window. Then, the button works. 

Note that the same situation is there with "Tools > Options > LibreOffice > View", and then "Languages and Locales > Get more dictionaries online". It does not work when start center is open. 

Reproducible: Always


User Profile Reset: No


Additional Info:
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 87519013cb9ed1eae27f799a1a35c8a3cd0e3dd7
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Commit Notification 2024-10-04 11:05:43 UTC
Hossein committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bb0e5aa97965b2710200da677db032289c373afe

tdf#163291 Fix AdditionsDialog in start center

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Xisco Faulí 2024-10-04 11:45:53 UTC
Hi Hossein,
Thanks for fixing this issue. It seem it was already reported in Bugzilla. Next time, please try to check if the issue is already reported...
Comment 3 Xisco Faulí 2024-10-04 11:47:54 UTC
*** Bug 137922 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2024-10-04 11:48:48 UTC
*** Bug 147337 has been marked as a duplicate of this bug. ***
Comment 5 Xisco Faulí 2024-10-04 12:13:31 UTC
*** Bug 140919 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2024-10-04 13:31:01 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/df54f8a4bd8970cf13e6a6aaf9056afccf2cc758

related tdf#163291: revert workaround for tdf#137922

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-10-05 17:50:02 UTC
Hossein committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/e0c8191d7f30957a50fbfa3b5938cb6f9dacc9bf

tdf#163291 Fix AdditionsDialog in start center

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-10-05 17:53:05 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/9f4571da1df09461a58a7a7d1a7f0efcb7ac4959

related tdf#163291: revert workaround for tdf#137922

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 BogdanB 2024-10-13 17:38:28 UTC
Thanks, Hossein and Xisco.
Verified.

Working in
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4924a9f73fae17c14cc445e2804d4025a17acd30
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was not working in
Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded