tdf#163291 Fix AdditionsDialog in start center

Previously, AdditionsDialog was not working while in start center. Also,
there were a lot of code duplicates. This patch fixes these issues.

The UNO command .uno:AdditionsDialog was incorrectly implemented as
application specific. There were multiple duplicate conditions for
checking SID_ADDITIONS_DIALOG in each and every application. Now, this
is only done in sfx2/source/appl/appserv.cxx in a single point.

The AdditionsDialog can now be opened while in start center in different
places of "Tools > Options" for icons, dictionaries, etc. Also, this
LibreOffice BASIC code snippet opens it:

Sub Main()
    oDispatch = CreateUnoService("com.sun.star.frame.DispatchHelper")
    Dim args(0) As New com.sun.star.beans.PropertyValue
    oDispatch.executeDispatch(StarDesktop.ActiveFrame,
        ".uno:AdditionsDialog", "", 0, args)
End Sub

Change-Id: Ifb7e466449008b9bb6e5b678da2e54f58bc101e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174469
Reviewed-by: Hossein   <hossein@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit bb0e5aa97965b2710200da677db032289c373afe)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174447
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>