sfx2/source/appl/appserv.cxx
@@ -1585,6 +1585,26 @@ void SfxApplication::OfaExec_Impl( SfxRequest& rReq )
             break;
         }
 
+        case SID_ADDITIONS_DIALOG:
+        {
+            OUString sAdditionsTag = u""_ustr;
+
+            const SfxStringItem* pStringArg = rReq.GetArg<SfxStringItem>(FN_PARAM_ADDITIONS_TAG);
+            if (pStringArg)
+                sAdditionsTag = pStringArg->GetValue();
+
+            VclAbstractDialogFactory* pFact = VclAbstractDialogFactory::Create();
+            VclPtr<AbstractAdditionsDialog> pDialog(
+                pFact->CreateAdditionsDialog(rReq.GetFrameWeld(), sAdditionsTag));
+            pDialog->StartExecuteAsync(
+                [pDialog] (sal_Int32 /*nResult*/)->void
+                {
+                    pDialog->disposeOnce();
+                }
+                );
+            break;
+        }
+
         case SID_MORE_DICTIONARIES:
         {
             uno::Sequence<beans::PropertyValue> aArgs{ comphelper::makePropertyValue(
